[package]
name = "misery-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"

dotenv = "0.15.0"

async-std = "1.11.0"
once_cell = "1.10.0"
anyhow = "1.0.56"
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"